# GeobitNonrigidDescriptor_ICCV_2019

./: .gitignore  CMakeLists.txt  Geobit-ICCV2019.ipynb  INSTALL_SINGULARITY.md  README.md
example/: cloud_1.csv  intrinsics.xml  run.sh
src/: CMakeLists.txt  clouds.cpp  clouds.hpp  compute_heat_geodesic.m  gaussian_256.txt  geobit.cpp  geobit.hpp  heat_geodesic_gptoolbox.m  main.cpp  nonrigid_descriptor.cpp  run_experiments.py  sampling_pairs.m  test_pairs.txt  test_pairs_256.txt  test_pairs_reaching_holes.txt  utils.cpp  utils.hpp
src/aux/: gaussian_1024.txt  gaussian_128.txt  gaussian_512.txt  test_pairs_128.txt  test_pairs_512.txt
src/libgeodesic/src/: hmCholeskyFactor.cpp  hmDenseMatrix.cpp  hmSparseMatrix.cpp  hmTriDistance.cpp  hmTriMesh.cpp  hmVectorDouble.cpp  hmVectorPairSizeTDouble.cpp  hmVectorSizeT.cpp  main.xxc
